darken the higlight color to solve contrast issues

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #172b4d;
   --secondary-color: #3a4a42;
-  --highlight-color: #36b37f;
+  --highlight-color: #2a6b50;
   --neutral-color: #dfe1e6;
   --neutral-color-50: #c1c7d0;
   --secondary-color-50: #d0d9d4;
